# nesy_prompting

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
baseline_eval/: clutrr.scl  hwf_scallop.py  leaf.py  run_clutrr.py  sum_n.py
model_outputs/gemini-2.0-flash/clevr/: llm_symbolic_fs.txt
model_outputs/gemini-2.0-flash/clutrr/: llm_symbolic_fs.txt
model_outputs/gemini-2.0-flash/hwf/: llm_symbolic_fs.txt
model_outputs/gemini-2.0-flash/leaf/: llm_symbolic_fs.txt
model_outputs/gemini-2.0-flash/sum2/: llm_symbolic_fs.txt  llm_symbolic_zs.txt  results.txt
model_outputs/ised/: leaf_outputs.pkl
model_outputs/scallop/: clevr.pkl  clutrr.pkl  clutrr_complex.pkl  hwf.pkl  leaf.pkl  mnist.pkl
scripts/: create_figures.ipynb  inspect-results.ipynb  llm_symbolic_eval.py
src/: dataset.py  function.py  function_evaluation.py  pddl.py  program_gen.py  symbol_mapping.py  utils.py
src/llm_models/: README.md  __init__.py  llm_models.py
