[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "Unsupervised Neurosymbolic"
authors = [
  { name = "Adam Stein" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">= 3.10"

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true
